# confa-app

./: .gitignore  README.md  analysis_options.yaml  buf.gen.yaml  pubspec.yaml  voice_log.txt
.github/workflows/: build.yaml
.zed/: settings.json
android/: gradle.properties
android/app/: build.gradle  build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  main.dart  router.dart  theme.dart
lib/auth/: auth.dart  connection_settings.dart  openid.dart
lib/bloc/: connection_cubit.dart  connection_state.dart  server_bloc.dart  server_event.dart  server_state.dart  voice_bloc.dart  voice_event.dart  voice_state.dart
lib/chat/: chat.dart
lib/repo/: user.dart
lib/screens/: connect_screen.dart  connect_screen.g.dart  loading_screen.dart  server_screen.dart  server_screen.g.dart  server_selection_screen.dart  server_selection_screen.g.dart  splash_screen.dart  splash_screen.g.dart  update_screen.dart  update_screen.g.dart
lib/server/: server.dart
lib/services/: connection_manager.dart  shared_storage.dart  shared_storage.g.dart
lib/voice/: connection.dart  listener.dart  recorder.dart  service.dart  speaker.dart
lib/widgets/: loading.dart  server.dart  text_channel.dart  user_profile.dart  voice_channel.dart
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: voice.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+32 files in other folders)
