[package]
  name    = "rust_lib_confa"
  version = "0.1.0"
  edition = "2021"

[lib]
  crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
  flutter_rust_bridge = "=2.11.1"
  libconfa            = { git = "https://github.com/confa-chat/libconfa.git" }
  tokio               = { version = "1.47.1", features = ["full"] }

[lints.rust]
  unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
